--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/index.min.css" />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <div>Hello</div>
-    <!-- <include src="./partials/example.html"></include> -->
+    <include src="./partials/header.html"></include>
+    <include src="./partials/hero.html"></include>
+    <include src="./partials/whatwedo.html"></include>
+    <include src="./partials/photo-section.html"></include>
   </body>
 </html>
