--- a/src/index.html
+++ b/src/index.html
@@ -18,5 +18,10 @@
     <include src="./partials/hero.html"></include>
     <include src="./partials/whatwedo.html"></include>
     <include src="./partials/photo-section.html"></include>
+    <include src="./partials/gear-cage.html"></include>
+    <include src="./partials/leaf-section.html"></include>
+    <include src="./partials/client.html"></include>
+    <include src="./partials/star-section.html"></include>
+    <include src="./partials/help.html"></include>
   </body>
 </html>
