--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/index.min.css" />
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./js/index.js"></script>
   </head>
   <body>
     <include src="./partials/header.html"></include>
@@ -23,5 +23,7 @@
     <include src="./partials/client.html"></include>
     <include src="./partials/star-section.html"></include>
     <include src="./partials/help.html"></include>
+    <include src="./partials/footer.html"></include>
+    <script src="./js/index.js"></script>
   </body>
 </html>
